# trading-automata

./: .ALEMBIC_QUICK_REFERENCE.md  .CLI_GUIDE.md  .CLI_INSTALL.md  .CLI_QUICK_REFERENCE.md  .DB_INIT.md  .DOCKER_QUICK_REFERENCE.md  .EVENT_LOGGING.md  .QUICK_FIX.md  .QUICK_REFERENCE.md  .SETUP_COMPLETE.md  .TELEGRAM_QUICK_START.md  .dockerignore  .env.example  .gitattributes  .gitignore  CLI_UPDATES.md  COINBASE_DEPLOYMENT_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DESIGN_REVIEW.md  FINAL_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INDEX.md  MULTI_BOT_IMPLEMENTATION_SUMMARY.md  MULTI_BROKER_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_DATABASE.md  QUICK_START.md  README.md  SYSTEM_OVERVIEW.txt  TESTING_CHECKLIST.md  WEEK1_COMPLETION_SUMMARY.md  alembic.ini  docker-compose.traefik.yml  pyproject.toml  requirements.txt  (+1 more)
.github/workflows/: deploy.yml
alembic/: __init__.py  env.py
alembic/versions/: 001_initial_schema.py  002_add_bot_sessions.py  003_add_bot_name.py
config/: bots.yaml  config.yml  example-bots-coinbase.yaml  settings.py  strategies.yaml
docker/: .env.example  .env.prod.example  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
docker/nginx/: nginx-init.conf  nginx.conf
docker/prometheus/: prometheus.yml
docs/: ALEMBIC_MIGRATIONS.md  ARCHITECTURE.md  BOT_MONITORING.md  CONFIGURATION.md  DATABASE_INTEGRATION.md  DATABASE_SETUP.md  DOCKER_SETUP.md  EUR_USD_STRATEGY.md  FILTERS.md  MULTI_BROKER.md  OBSERVABILITY.md  RSI_ATR_STRATEGY.md  TELEGRAM_SETUP.md
docs/knowledge-base/: 00-MOC.md  01-microservices-architecture.md  02-inter-service-communication.md  03-database-schema.md  04-authentication-and-rbac.md  05-trading-loop-lifecycle.md  06-strategies-and-signals.md  07-portfolio-and-risk-management.md  08-broker-abstraction.md  09-prometheus-metrics-design.md  10-faulty-bot-detection.md  11-grafana-dashboards.md  12-docker-compose-topology.md  13-development-workflow.md  14-event-driven-architecture.md  15-observability-engineering.md  16-api-design-patterns.md  17-web-ui-dashboard.md
services/api/: Dockerfile  pyproject.toml  requirements.txt
services/api/app/: __init__.py  config.py  database.py  main.py  metrics.py  models.py
services/api/app/auth/: bootstrap.py  dependencies.py  jwt.py  password.py
services/api/app/middleware/: rate_limit.py
services/api/app/routers/: audit.py  auth.py  bots.py  credentials.py  notifications.py  strategies.py  trades.py  users.py  ws.py
services/api/app/services/: audit_service.py  bot_service.py  credential_service.py  notification_service.py  strategy_service.py  trade_service.py  trading_pairs_service.py  user_service.py
services/trading-engine/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
services/web-ui/: Dockerfile  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts
shared/alembic/: env.py
src/: cli.py  main.py
src/brokers/: alpaca_broker.py  coinbase_broker.py
src/data/: alpaca_data.py  base.py
src/database/: __init__.py  health.py  init.py  repository.py
src/execution/: order_manager.py
src/monitoring/: event_logger.py
src/notifications/: __init__.py  telegram_bot.py
src/portfolio/: manager.py
src/strategies/: base.py  registry.py
trading_automata/config/: bot_config.py
trading_automata/data/: alpaca_data.py
trading_automata/database/: init.py  repository.py
trading_automata/execution/: order_manager.py
trading_bot/: cli.py  main.py
trading_bot/brokers/: base.py  (+2 more)
(+139 files in other folders)
