# Root workspace - individual services have their own pyproject.toml
# See: services/trading-engine/pyproject.toml
#      services/api/pyproject.toml

[project]
name = "trading-automata-workspace"
version = "0.5.0"
description = "Trading Automata - Multi-account trading platform"
requires-python = ">=3.13"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88
